docs/api/qiskit/2.3/qiskit.circuit.library.MCXGate.mdx
---
title: MCXGate (v2.3)
description: API reference for qiskit.circuit.library.MCXGate in qiskit v2.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.MCXGate
---

# MCXGate

<Class id="qiskit.circuit.library.MCXGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/x.py#L809-L1020" signature="qiskit.circuit.library.MCXGate(num_ctrl_qubits=None, label=None, ctrl_state=None, *, _base_label=None)" modifiers="class">
  Bases: [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.controlledgate.ControlledGate")

  The general, multi-controlled X gate.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`mcx()`](qiskit.circuit.QuantumCircuit#mcx "qiskit.circuit.QuantumCircuit.mcx") method.

  Create new MCX gate.

  ## Attributes

  **Parameters**

  *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int) *| None*) –
  *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) –
  *   **ctrl\_state** ([*int*](https://docs.python.org/3/library/functions.html#int)  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) –

  ### base\_class

  <Attribute id="qiskit.circuit.library.MCXGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.MCXGate.base_class "qiskit.circuit.library.MCXGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrized gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.MCXGate.ctrl_state">
    Return the control state of the gate as a decimal integer.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.MCXGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.MCXGate.definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from [`ctrl_state`](#qiskit.circuit.library.MCXGate.ctrl_state "qiskit.circuit.library.MCXGate.ctrl_state"), the returned definition is conjugated with X without changing the internal `_definition`.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.MCXGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.MCXGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.MCXGate.name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.
  </Attribute>

  ### num\_ancilla\_qubits

  <Attribute id="qiskit.circuit.library.MCXGate.num_ancilla_qubits">
    The number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.MCXGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.MCXGate.num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int)
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.MCXGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.MCXGate.params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    [list](https://docs.python.org/3/library/stdtypes.html#list)

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – Controlled gate does not define a base gate
  </Attribute>

  ## Methods

  ### add\_decomposition

  <Function id="qiskit.circuit.library.MCXGate.add_decomposition" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L320-L325" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.MCXGate.broadcast_arguments" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L199-L256" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list)) – List of quantum bit arguments.
    *   **cargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list)) – List of classical bit arguments.

    **Returns**

    A tuple with single arguments.

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If the input is not valid. For example, the number of arguments does not match the gate expectation.

    **Return type**

    [*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable)\[[tuple](https://docs.python.org/3/library/stdtypes.html#tuple)\[[list](https://docs.python.org/3/library/stdtypes.html#list), [list](https://docs.python.org/3/library/stdtypes.html#list)]]
  </Function>

  ### control

  <Function id="qiskit.circuit.library.MCXGate.control" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/x.py#L940-L990" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=None)">
    Return a controlled version of the MCX gate.

    The controlled gate is implemented as [`MCXGate`](#qiskit.circuit.library.MCXGate "qiskit.circuit.library.MCXGate"). The value of `annotated` is ignored.

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int)) – Number of controls to add. Defauls to `1`.
    *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) – Optional gate label. Defaults to `None`.
    *   **ctrl\_state** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)  *|*[*int*](https://docs.python.org/3/library/functions.html#int) *| None*) – The control state of the gate, specified either as an integer or a bitstring (e.g. `"110"`). If `None`, defaults to the all-ones state `2**num_ctrl_qubits - 1`
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool) *| None*) – Ignored.

    **Returns**

    A controlled version of this gate.
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.MCXGate.copy" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/x.py#L992-L1011" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)) – name to be given to the copied circuit, if `None` then the name stays the same.

    **Returns**

    a copy of the current instruction, with the name updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### get\_num\_ancilla\_qubits

  <Function id="qiskit.circuit.library.MCXGate.get_num_ancilla_qubits" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/x.py#L899-L925" signature="get_num_ancilla_qubits(num_ctrl_qubits, mode='noancilla')" modifiers="static">
    Get the number of required ancilla qubits without instantiating the class.

    This staticmethod might be necessary to check the number of ancillas before creating the gate, or to use the number of ancillas in the initialization.

    <Admonition title="Deprecated since version 2.1" type="danger">
      The method `qiskit.circuit.library.standard_gates.x.MCXGate.get_num_ancilla_qubits()` is deprecated as of Qiskit 2.1. It will be removed in Qiskit 3.0. For an MCXGate it is no longer possible to know the number of ancilla qubits that would be eventually used by the transpiler when the gate is created. Instead, it is recommended to use MCXGate and let HighLevelSynthesis choose the best synthesis method depending on the number of ancilla qubits available. However, if a specific synthesis method using a specific number of ancilla qubits is required, one can create a custom gate by calling the corresponding synthesis function directly.
    </Admonition>

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int)) –
    *   **mode** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)) –

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int)
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.MCXGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/x.py#L885-L897" signature="inverse(annotated=False)">
    Invert this gate. The MCX is its own inverse.

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as this gate is self-inverse.

    **Returns**

    inverse gate (self-inverse).

    **Return type**

    [MCXGate](#qiskit.circuit.library.MCXGate "qiskit.circuit.library.MCXGate")
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.MCXGate.is_parameterized" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L285-L290" signature="is_parameterized()">
    Return whether the `Instruction` contains [compile-time parameters](circuit#circuit-compile-time-parameters).
  </Function>

  ### power

  <Function id="qiskit.circuit.library.MCXGate.power" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L63-L94" signature="power(exponent, annotated=False)">
    Raise this gate to the power of `exponent`.

    Implemented either as a unitary gate (ref. [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate")) or as an annotated operation (ref. [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation")). In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), when the power of a gate can be expressed in terms of another standard gate that is returned directly.

    **Parameters**

    *   **exponent** ([*float*](https://docs.python.org/3/library/functions.html#float)) – the power to raise the gate to
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – indicates whether the power gate can be implemented as an annotated operation. In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), this argument is ignored when the power of a gate can be expressed in terms of another standard gate.

    **Returns**

    An operation implementing `gate^exponent`

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If gate is not unitary
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.MCXGate.repeat" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L493-L523" signature="repeat(n)">
    Creates an instruction with `self` repeated $n$ times.

    **Parameters**

    **n** ([*int*](https://docs.python.org/3/library/functions.html#int)) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.MCXGate.reverse_ops" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L347-L371" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.circuit.library.MCXGate.soft_compare" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L216-L256" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool)
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.MCXGate.to_matrix" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L49-L61" signature="to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Returns**

    if the Gate subclass has a matrix definition.

    **Return type**

    np.ndarray

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.
  </Function>

  ### to\_mutable

  <Function id="qiskit.circuit.library.MCXGate.to_mutable" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L145-L153" signature="to_mutable()">
    Return a mutable copy of this gate.

    This method will return a new mutable copy of this gate instance. If a singleton instance is being used this will be a new unique instance that can be mutated. If the instance is already mutable it will be a deepcopy of that instance.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.MCXGate.validate_parameter" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L258-L272" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

